-- release 2.6.1
- enhanced security: replace secpr5121 with secp256r1 for default ECGenParameterSpec
- enhanced logging: log detailed information and stack trace health check failure
- enhanced logging: Netty channel handler exception will be logged only when:
    1. run with -debug
    2. or caller address is in enabled whitelist  or not in enabled blacklist

- Config change: Regex.Prefix is no longer used in CallerAddressFilter, the whitelist and blacklist no longer need a prefix to mark a value as regex.
    1. cfg_nio.properties
        - removed: CallerAddressFilter.Regex.Prefix
        - default value changed: CallerAddressFilter.option=String (was "HostName")
    2. cfg_grpc.properties
    - removed: gRpc.server.CallerAddressFilter.Regex.Prefix
    - default value changed: gRpc.server.CallerAddressFilter.option=String (was "HostName")

Maven Central Repository:
https://repo.maven.apache.org/maven2/org/summerboot/jexpress/2.6.1/
https://central.sonatype.com/artifact/org.summerboot/jexpress/2.6.1

mvnrepository.com:
https://mvnrepository.com/artifact/org.summerboot/jexpress/2.6.1


-- release 2.6.0
- enhanced security 1: this change use enhanced encryption/decryption to protect sensitive data, like password in config files.
	The 2.5.2 cannot read the current encrypted data by 2.5.1
	it requires the app with 2.5.1 to decrypt to DEC, or deploy with DEC
	to decrypt: java -jar your-app.jar -decrypt -auth <root password> [-domain <your domain>]
			or: java -jar your-app.jar -decrypt -authfile <path to root password file> [-domain <your domain>]
- enhanced security 2: default master password is no longer hardcoded, it will be loaded from etc/master.password file (auto create if no exists) when "-authfile <path to master.password>" is not provided to launch the app
- enhanced security 3: HTTP server supports caller address filter with regex precheck
- enhanced security 4: gRPC server supports caller address filter with regex precheck