@@ -18,9 +18,9 @@ on:
     branches: [ main, develop, main1, release* ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ main, feature/*, bugfix/*, hotfix/* ]
   schedule:
-    - cron: '42 10 * * 3'
+    - cron: '0 11,23 * * *'
 
 permissions:
   contents: read
